...
        
    }
    
    class func prepareAddRecordTimeCell(tableView tableView: UITableView, timeSpent: Time?) -> DetailCell {
        
        if let preparedCell = tableView.dequeueReusableCellWithIdentifier("DetailCell") as? DetailCell {
            preparedCell.title.text = "Time Spent"
            
            if let unwrappedTimeSpent = timeSpent?.toDouble() {
                preparedCell.detail.text = Time(newTime: unwrappedTimeSpent).toString()
            } else {
                preparedCell.detail.text = "00:00"
            }
            
            preparedCell.accessoryType = UITableViewCellAccessoryType.DisclosureIndicator
            Style.detailCell(preparedCell)
            
            return preparedCell
...
    class func prepareNameTextfieldCell(tableView tableView: UITableView, name: String?) -> NameTextfieldCell {
        
        if let preparedCell = tableView.dequeueReusableCellWithIdentifier("NameTextfieldCell") as? NameTextfieldCell {
            if let unwrappedName = name {
                preparedCell.textField.text = unwrappedName
            } else {
                preparedCell.textField.placeholder = "Name (Required)"
            }
            
            preparedCell.selectionStyle = .None
            
            Style.textfieldCell(preparedCell)
            
...
        
    }
    
    class func prepareAddTaskCategoryCell(tableView tableView: UITableView, categoryName: String?) -> DetailCell {
        
        if let preparedCell = tableView.dequeueReusableCellWithIdentifier("DetailCell") as? DetailCell {
            preparedCell.title.text = "Category"
            
            if let unwrappedCategoryName = categoryName {
                preparedCell.detail.text = unwrappedCategoryName
            } else {
                preparedCell.detail.text = "Choose Category"
            }
...
        
    }
    
    class func prepareAddTaskTimeCell(tableView tableView: UITableView, time: Double?) -> DetailCell {
        
        if let preparedCell = tableView.dequeueReusableCellWithIdentifier("DetailCell") as? DetailCell {
            preparedCell.title.text = "Time Budgeted"
            
            if let unwrappedTime = time {
                preparedCell.detail.text = Time(newTime: unwrappedTime).toString()
            } else {
                preparedCell.detail.text = "00:00"
            }
...
    class func displayDeleteTaskAlert(viewController viewController: BudgetEditorViewController, indexPath: NSIndexPath) {
        let realm = Database.getRealm()
        let currentBudget = realm.objects(Budget).filter("isCurrent = TRUE").first!
        let currentCategory = currentBudget.categories[indexPath.section]
        let currentTask = currentCategory.tasks[indexPath.row]
        
        let alert = UIAlertController(title: "Are You Sure?", message: "This will also delete any Records under this Task!", preferredStyle: UIAlertControllerStyle.Alert)
        alert.addAction(UIAlertAction(title: "Yes", style: UIAlertActionStyle.Default, handler: { (action) -> Void in
            Database.deleteTask(task: currentTask)
            viewController.tableView.reloadData()
        }))
        alert.addAction(UIAlertAction(title: "Cancel", style: UIAlertActionStyle.Cancel, handler: nil))
        
        viewController.presentViewController(alert, animated: true, completion: {})
...
        viewController.presentViewController(alert, animated: true, completion: {})
    }

    class func displayAddCategoryAlert(viewController viewController: BudgetEditorViewController) {
        var inputTextField = UITextField()
        
        let alert = UIAlertController(title: "New Category", message: "", preferredStyle: UIAlertControllerStyle.Alert)
        alert.addAction(UIAlertAction(title: "Add", style: UIAlertActionStyle.Default, handler: { (action) -> Void in
            if (Database.checkCategoryName(name: inputTextField.text!)) {
                Database.addCategory(name: inputTextField.text!)
                viewController.tableView.reloadData()
            } else {
                Factory.displayAlert(viewController: viewController, title: "Category Name Taken", message: "'There is another category that uses this name.")
            }
...
    class func displayEditCategoryAlert(viewController viewController: BudgetEditorViewController, categoryName: String) {
        let realm = Database.getRealm()
        let currentBudget = realm.objects(Budget).filter("isCurrent = TRUE").first!
        var inputTextField = UITextField()
        let category = currentBudget.categories.filter("name = '\(categoryName)'").first!
        
        let alert = UIAlertController(title: "Edit Category", message: "", preferredStyle: UIAlertControllerStyle.Alert)
        alert.addAction(UIAlertAction(title: "Save", style: UIAlertActionStyle.Default, handler: { (action) -> Void in
            if (Database.checkCategoryName(name: inputTextField.text!) || category.name == inputTextField.text) {
                Database.updateCategory(categoryName: category.name, newCategoryName: inputTextField.text!)
                viewController.tableView.reloadData()
            } else {
                Factory.displayAlert(viewController: viewController, title: "Category Name Taken", message: "'\(inputTextField.text)' is already a Category")
...
            let length = currentBudget.categories.count
            if (index < (length - 1)) {
                Database.moveCategory(categoryName: categoryName, index: (index + 1))
                viewController.tableView.reloadData()
            }
        }))
        alert.addAction(UIAlertAction(title: "Delete", style: UIAlertActionStyle.Default, handler: { (action) -> Void in
            Factory.displayDeleteCategoryAlert(viewController: viewController, categoryName: category.name)
        }))
        alert.addAction(UIAlertAction(title: "Cancel", style: UIAlertActionStyle.Cancel, handler: { (action) -> Void in
            
        }))
        
...
