...
                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Save Task">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                    </view>
                    <navigationItem key="navigationItem" title="Choose Category" id="CaI-tj-qR1">
                        <barButtonItem key="rightBarButtonItem" title="+ Category" id="NoY-s9-58O">
                            <connections>
                                <action selector="addCategoryButtonPressed:" destination="hqG-Tg-S5U" id="fWD-LL-RZ3"/>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="39"/>
                                <state key="normal" title="Done">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Budget" id="xLz-f1-odg"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Budget" id="BDF-41-cZo">
                        <barButtonItem key="rightBarButtonItem" title="+ Record" id="I91-R2-98g">
                            <connections>
                                <action selector="addRecordButtonPressed:" destination="RAG-dR-QPg" id="Aph-jE-6eb"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Save Record">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                    <navigationItem key="navigationItem" title="Choose Task" id="NyX-dq-fJy">
                        <barButtonItem key="backBarButtonItem" title="Cancel" id="dSD-FM-jN5"/>
                        <barButtonItem key="rightBarButtonItem" title="+ Task" id="3us-hj-Pvh">
                            <connections>
                                <action selector="addTaskButtonPressed:" destination="pK4-2A-tVc" id="fae-9H-xv8"/>
...
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="168:00" id="xzX-Ik-CFV">
                        <barButtonItem key="leftBarButtonItem" title="+ Category" id="xaU-Sa-jBQ">
                            <connections>
...
                    </connections>
                </viewController>
                <tabBarItem title="Editor" id="jTn-2N-c04"/>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Kfw-Rl-jc1" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
...
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Settings" id="4HX-p4-aVW"/>
                    <navigationItem key="navigationItem" title="Settings" id="jWf-Uw-f7U"/>
                </tableViewController>
...
