...
        // Finish records retention code
        if (retainRecords){
            var frcRecords = CoreDataController.getFetchedResultsController(fetchRequest: CoreDataController.getFetchRequest("Records"), managedObjectContext: managedObjectContext)
            var fetchedObjects = frcRecords.fetchedObjects
            
            for var i = 0; i < fetchedObjects?.count; i++ {
                fetchedObjects?[indexPath.section][i].setValue("Taskless Records", forKey: "taskName")
            }
            
        } else {
            
        }
        
...
