...
            // Setting Current Selections
            categoryPicked = currentBudgetItem.category
            timePicked = Time.floatToTime(currentBudgetItem.timeRemaining)
            nameTextField.text = currentBudgetItem.name
            descriptionTextView.text = currentBudgetItem.descript
        } else {
            categoryPicked = "Uncategorized"
            timePicked = Time.floatToTime(0.0)
            nameTextField.text = ""
            descriptionTextView.text = ""
        }
        
        nameTextField.delegate = self
...
